openshift/jenkins/jenkins-latest.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins          # gunakan SA “jenkins”
      securityContext:
        runAsUser: 0                       # butuh SCC anyuid
        fsGroup: 0
      containers:
        - name: jenkins
          image: jenkins/jenkins:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080          # UI
            - name: agent
              containerPort: 50000         # JNLP/agent
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: web
      port: 8080
      targetPort: web
    - name: agent
      port: 50000
      targetPort: agent
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
spec:
  to:
    kind: Service
    name: jenkins
  port:
    targetPort: web
  tls:
    termination: edge
